test_scripts/errors/missing_semicolon_expr.shm
let x = 5;
print("a") print("b")
