test_scripts/errors/missing_semicolon_expr.stderr
Parse Error:
 1 | let x = 5;
 2 | print("a") print("b")
     ^^^^^^^^^^^^^^^^
Error: Expected `;` or newline after expression statement, found Identifier([112, 114, 105, 110, 116])
Failed to parse script
